# opengl3-minimo

./: README.md
builds/linux/: CMakeLists.txt  opengl3-minimo.code-workspace  workspace.code-workspace
builds/macos/: CMakeLists.txt  opengl3-minimo.code-workspace  workspace.code-workspace
builds/windows/: CMakeLists.txt  README.md  makefile  opengl3-minimo.code-workspace  workspace.code-workspace
builds/windows-v2/: CMakeLists.txt
src/: cauce.cpp  cauce.h  glincludes.h  main.cpp  matrices-tr.cpp  matrices-tr.h  matrizg.h  matrizg_impl.h  shaders.cpp  shaders.h  tumat.h  tup_mat.h  tuplasg.h  tuplasg_impl.h  vaos-vbos.cpp  vaos-vbos.h
